--- a/Components/General/css/common.less
+++ b/Components/General/css/common.less
@@ -1,1 +1,15 @@
-﻿
+﻿.Selectable {
+	-webkit-touch-callout: initial;
+	-webkit-user-select: text;
+	-moz-user-select: text;
+	-ms-user-select: text;
+	user-select: text;
+}
+
+.UnSelectable {
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+}
