--- a/Components/ProgressBar/progressbar.less
+++ b/Components/ProgressBar/progressbar.less
@@ -1,6 +1,7 @@
 ﻿@import '../General/css/common.less';
 
 .amc-progressbar {
+	.UnSelectable();
 	display: grid;
 	grid-template-areas: 'left middle right';
 	grid-template-columns: 0 max-content 1fr;
