--- a/Components/VideoPlayer/VideoPlayer.razor
+++ b/Components/VideoPlayer/VideoPlayer.razor
@@ -8,7 +8,6 @@
     </div>
 
     <div class="amc-videoplayer-empty" @onclick="OnEmptyClick">
-        
     </div>
 
     <div class="amc-videoplayer-info">
@@ -19,18 +18,25 @@
         <div class="amc-videoplayer-controls-left">
             <button class="amc-videoplayer-play" @onclick="PlayVideo">
                 <svg viewBox="0 0 36 40">
-                    <path class="amc-videoplayer-svg-fill" d="M34.5,19.1C34.5,19.1,34.5,19.1,34.5,19.1c0-0.5-0.2-0.8-0.6-1L6.5,3.2l0,0C6.3,3.1,6.1,3.1,5.9,3.1h0
-	                c0,0,0,0,0,0c-0.6,0-1.1,0.5-1.1,1.1v29.7l0,0v0c0,0.6,0.5,1.1,1.1,1.1c0.2,0,0.4-0.1,0.5-0.1l27.4-14.9l0,0
-	                C34.2,19.9,34.5,19.5,34.5,19.1L34.5,19.1z M7.1,6.1l23.9,12.9L7.1,32V6.1L7.1,6.1z" />
+                    <path class="amc-videoplayer-svg-fill" d="M2.85,1.21V38.79a1.19,1.19,0,0,0,1.84,1L33.61,21a1.2,1.2,0,0,0,0-2L4.69.22A1.19,1.19,0,0,0,2.85,1.21Z" />
                 </svg>
             </button>
             <button class="amc-videoplayer-pause" @onclick="PauseVideo">
                 <svg viewBox="0 0 36 40">
-                    <path class="amc-videoplayer-svg-fill" d="M11.8,36L11.8,36c-1.5,0-2.8-1.3-2.8-2.8V6.9c0-1.5,1.3-2.8,2.8-2.8h0c1.5,0,2.8,1.3,2.8,2.8v26.3 C14.6,34.7,13.3,36,11.8,36z" />
-                    <path class="amc-videoplayer-svg-fill" d="M24.6,36L24.6,36c-1.5,0-2.8-1.3-2.8-2.8V6.9c0-1.5,1.3-2.8,2.8-2.8h0c1.5,0,2.8,1.3,2.8,2.8v26.3 C27.4,34.7,26.2,36,24.6,36z" />
+                    <path class="amc-videoplayer-svg-fill" d="M13.62.31H6.54A1.18,1.18,0,0,0,5.35,1.49V20h0V38.52a1.18,1.18,0,0,0,1.19,1.17h7.08a1.18,1.18,0,0,0,1.19-1.17V20h0V1.48A1.18,1.18,0,0,0,13.62.31Z" />
+                    <path class="amc-videoplayer-svg-fill" d="M29.46.31H22.38a1.18,1.18,0,0,0-1.19,1.17V20h0V38.52a1.18,1.18,0,0,0,1.19,1.17h7.08a1.18,1.18,0,0,0,1.19-1.17V20h0V1.48A1.18,1.18,0,0,0,29.46.31Z" />
                 </svg>
             </button>
-            <button class="amc-videoplayer-stop" @onclick="StopVideo">Stop</button>
+            <button class="amc-videoplayer-stop" @onclick="StopVideo">
+                <svg viewBox="0 0 36 40">
+                    <path class="amc-videoplayer-svg-fill" d="M1.69,39.69h0A1.18,1.18,0,0,1,.47,38.52V20h0V1.49A1.18,1.18,0,0,1,1.66.32H34.57a1.18,1.18,0,0,1,1.19,1.17V20h0V38.51a1.18,1.18,0,0,1-1.19,1.17H1.69Z" />
+                </svg>
+            </button>
+            <button class="amc-videoplayer-volume">
+                <svg viewBox="0 0 36 40">
+                    <path class="amc-videoplayer-svg-fill" d="M33.56,38.69V1.31a1.18,1.18,0,0,0-1.82-1L16.54,10.55,3,13.18c-.72.46-.72,13.18,0,13.64l13.56,2.63,15.2,10.23A1.18,1.18,0,0,0,33.56,38.69Z" />
+                </svg>
+            </button>
         </div>
 
         <div class="amc-videoplayer-controls-middle">
@@ -38,8 +44,45 @@
         </div>
 
         <div class="amc-videoplayer-controls-right">
-            <button class="amc-videoplayer-enterfullscreen" @onclick="EnterFullScreen">Full Screen</button>
-            <button class="amc-videoplayer-exitfullscreen" @onclick="ExitFullScreen">Exit Full Screen</button>
+            <button class="amc-videoplayer-more">
+                <svg viewBox="0 0 36 40">
+                    <circle class="amc-videoplayer-svg-fill" cx="18.09" cy="20.45" r="4.26" />
+                    <circle class="amc-videoplayer-svg-fill" cx="4.79" cy="20.45" r="4.26" />
+                    <circle class="amc-videoplayer-svg-fill" cx="31.38" cy="20.45" r="4.26" />
+                </svg>
+            </button>
+            <button class="amc-videoplayer-enterfullscreen" @onclick="EnterFullScreen">
+                <svg viewBox="0 0 36 40">
+                    <path class="amc-videoplayer-svg-fill" d="M35.43.3l.06,0Z" />
+                    <path class="amc-videoplayer-svg-fill" d="M32.64.27H21.51a.44.44,0,0,0-.43.45h0V3.33h0a.44.44,0,0,0,.43.45H32.19V.7A.44.44,0,0,1,32.64.27Z" />
+                    <path class="amc-videoplayer-svg-fill" d="M35.34.28l-.07,0h.07Z" />
+                    <path class="amc-videoplayer-svg-fill" d="M35.49.33l-.06,0-.09,0h-2.7a.44.44,0,0,0-.45.43V7.58h0v6.88a.45.45,0,0,0,.45.44h2.62a.44.44,0,0,0,.45-.43V7.58h0V3.33h0V.7A.44.44,0,0,0,35.49.33Z" />
+                    <path class="amc-videoplayer-svg-fill" d="M.47,39.79l0,0Z" />
+                    <path class="amc-videoplayer-svg-fill" d="M3.27,39.82H14.4a.44.44,0,0,0,.43-.44h0V36.75h0a.44.44,0,0,0-.44-.44H3.71v3.07A.44.44,0,0,1,3.27,39.82Z" />
+                    <path class="amc-videoplayer-svg-fill" d="M.57,39.81h0Z" />
+                    <path class="amc-videoplayer-svg-fill" d="M.42,39.75l0,0,.1,0h2.7a.44.44,0,0,0,.44-.44V32.51h0V25.63a.44.44,0,0,0-.44-.44H.64a.44.44,0,0,0-.44.43v6.88h0v4.24h0v2.63A.41.41,0,0,0,.42,39.75Z" />
+                </svg>
+            </button>
+            <button class="amc-videoplayer-exitfullscreen" @onclick="ExitFullScreen">
+                <svg viewBox="0 0 36 40">
+                    <path class="amc-videoplayer-svg-fill" d="M20.36,16.37a.05.05,0,0,1,0,0A.05.05,0,0,0,20.36,16.37Z" />
+                    <path class="amc-videoplayer-svg-fill" d="M22.34,16.39h7.88a.31.31,0,0,0,.31-.32h0V14.22h0a.31.31,0,0,0-.31-.31H22.65v2.17A.31.31,0,0,1,22.34,16.39Z" />
+                    <path class="amc-videoplayer-svg-fill" d="M20.42,16.39h0Z" />
+                    <path class="amc-videoplayer-svg-fill" d="M20.32,16.35a.05.05,0,0,0,0,0l.06,0h1.92a.31.31,0,0,0,.31-.31V11.21h0V6.34A.31.31,0,0,0,22.34,6H20.48a.32.32,0,0,0-.32.31v4.87h0v3h0v1.86A.3.3,0,0,0,20.32,16.35Z" />
+                    <path class="amc-videoplayer-svg-fill" d="M15.77,16.2a.05.05,0,0,1,0,0A.05.05,0,0,0,15.77,16.2Z" />
+                    <path class="amc-videoplayer-svg-fill" d="M15.79,14.22h0v-3h0V6.34A.31.31,0,0,0,15.48,6H13.62a.31.31,0,0,0-.31.31v4.87h0v2.7h2.18A.3.3,0,0,1,15.79,14.22Z" />
+                    <path class="amc-videoplayer-svg-fill" d="M15.79,16.14s0,0,0-.06h0S15.79,16.12,15.79,16.14Z" />
+                    <path class="amc-videoplayer-svg-fill" d="M15.75,16.24a.05.05,0,0,0,0,0s0,0,0-.06,0,0,0-.06h0V14.22h0a.3.3,0,0,0-.3-.31H5.74a.31.31,0,0,0-.31.31h0v1.85h0a.31.31,0,0,0,.31.32h9.75A.3.3,0,0,0,15.75,16.24Z" />
+                    <path class="amc-videoplayer-svg-fill" d="M15.55,23.72l0,0Z" />
+                    <path class="amc-videoplayer-svg-fill" d="M13.56,23.69H5.68a.31.31,0,0,0-.31.31h0v1.86h0a.3.3,0,0,0,.3.31h7.57V24A.31.31,0,0,1,13.56,23.69Z" />
+                    <path class="amc-videoplayer-svg-fill" d="M15.48,23.7h0Z" />
+                    <path class="amc-videoplayer-svg-fill" d="M15.58,23.74l0,0-.07,0H13.56a.31.31,0,0,0-.31.31v4.87h0v4.88a.31.31,0,0,0,.31.31h1.87a.31.31,0,0,0,.31-.31V28.87h0v-3h0V24A.3.3,0,0,0,15.58,23.74Z" />
+                    <path class="amc-videoplayer-svg-fill" d="M20.19,23.88l0,0Z" />
+                    <path class="amc-videoplayer-svg-fill" d="M20.17,25.87h0v3h0v4.87a.32.32,0,0,0,.32.31h1.86a.31.31,0,0,0,.31-.31V28.88h0V26.18H20.48A.31.31,0,0,1,20.17,25.87Z" />
+                    <path class="amc-videoplayer-svg-fill" d="M20.18,24s0,0,0,.05h0A.11.11,0,0,1,20.18,24Z" />
+                    <path class="amc-videoplayer-svg-fill" d="M20.21,23.85l0,0a.2.2,0,0,0,0,.07.11.11,0,0,0,0,.05h0v1.86h0a.31.31,0,0,0,.31.31h9.74a.31.31,0,0,0,.31-.31h0V24h0a.31.31,0,0,0-.31-.31H20.47A.31.31,0,0,0,20.21,23.85Z" />
+                </svg>
+            </button>
         </div>
     </div>
 
@@ -67,7 +110,7 @@
 
     private bool IsUserInteracting => IsUserMovingMouse || IsUserChangingProgress;
 
-    private bool HideControls => !IsUserInteracting && CurrentTime > 0;
+    private bool HideControls => IsVideoPlaying && !IsUserInteracting;
 
     private void Repaint()
     {
@@ -125,13 +168,15 @@
 
         Repaint();
 
-        latestId = Guid.NewGuid();
 
-        await ProgressiveDelay(latestId);
+        await ProgressiveDelay();
     }
 
-    private async Task ProgressiveDelay(Guid id)
+    private async Task ProgressiveDelay()
     {
+        Guid id = Guid.NewGuid();
+        latestId = id;
+
         await Task.Delay(HideControlsDelay);
 
         if (id != latestId)
@@ -201,7 +246,7 @@
             var module = await Module;
 
             await module.InvokeVoidAsync("init", ComponentElement);
-            
+
             await Implement(VideoEvents.TimeUpdate);
             await Implement(VideoEvents.Play);
             await Implement(VideoEvents.Pause);
