--- a/Components/VideoPlayer/VideoPlayer.razor.css
+++ b/Components/VideoPlayer/VideoPlayer.razor.css
@@ -43,7 +43,7 @@
   border: none;
   color: #fff;
   cursor: pointer;
-  opacity: 0.6;
+  opacity: 0.8;
   transition: opacity 0.2s ease-in-out;
 }
 .amc-videoplayer button .amc-videoplayer-svg-fill {
@@ -51,11 +51,6 @@
 }
 .amc-videoplayer button:hover {
   opacity: 1;
-}
-.amc-videoplayer-play svg,
-.amc-videoplayer-pause svg {
-  width: 30px;
-  height: 30px;
 }
 .amc-videoplayer-info,
 .amc-videoplayer-controls,
@@ -74,6 +69,21 @@
 .amc-videoplayer-controls {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+}
+.amc-videoplayer-controls > div {
+  display: flex;
+  flex-direction: row;
+}
+.amc-videoplayer-controls-right {
+  justify-content: flex-end;
+}
+.amc-videoplayer-controls button {
+  padding: 5px;
+  margin-right: 15px;
+}
+.amc-videoplayer-controls button svg {
+  width: 18px;
+  height: 20px;
 }
 .amc-videoplayer-pause {
   display: none;
