--- a/Components/VideoPlayer/videoplayer.less
+++ b/Components/VideoPlayer/videoplayer.less
@@ -30,7 +30,7 @@
 		border: none;
 		color: #fff;
 		cursor: pointer;
-		opacity: .6;
+		opacity: .8;
 		transition: opacity .2s ease-in-out;
 
 		.amc-videoplayer {
@@ -43,14 +43,6 @@
 
 		&:hover {
 			opacity: 1;
-		}
-	}
-
-	&-play,
-	&-pause {
-		svg {
-			width: 30px;
-			height: 30px;
 		}
 	}
 
@@ -77,6 +69,25 @@
 	&-controls {
 		display: grid;
 		grid-template-columns: 1fr 1fr 1fr;
+
+		> div {
+			display: flex;
+			flex-direction: row;
+		}
+
+		&-right {
+			justify-content: flex-end;
+		}
+
+		button {
+			padding: 5px;
+			margin-right: 15px;
+
+			svg {
+				width: 18px;
+				height: 20px;
+			}
+		}
 	}
 
 	&-pause {
