--- a/Components/VideoPlayer/VideoPlayer.razor
+++ b/Components/VideoPlayer/VideoPlayer.razor
@@ -87,7 +87,7 @@
     </div>
 
     <div class="amc-videoplayer-progress" @onmousedown="OnProgressMouseDown">
-        <ProgressBar Value="CurrentTime" Total="Duration" Style="ProgressBarStyle" OnChange="OnProgressChange" />
+        <ProgressBar Value="CurrentTime" Total="Duration" Style="ProgressBarStyle" OnChanged="OnProgressChange" />
     </div>
 
 </div>
