--- a/Components/VideoPlayer/videoplayer.less
+++ b/Components/VideoPlayer/videoplayer.less
@@ -73,6 +73,7 @@
 		> div {
 			display: flex;
 			flex-direction: row;
+			align-items:center;
 		}
 
 		&-right {
@@ -90,6 +91,10 @@
 		}
 	}
 
+	&-volumeBar{
+		width:100px;
+	} 
+	
 	&-pause {
 		display: none;
 	}
