change volume progress bar design

--- a/Components/VideoPlayer/VideoPlayer.razor
+++ b/Components/VideoPlayer/VideoPlayer.razor
@@ -39,7 +39,7 @@
             </button>
 
             <div class="amc-videoplayer-volumeBar">
-                <ProgressBar Value="100" Total="100" Style=ProgressBarStyle.Circle OnChange="OnVolumeChange" />
+                <ProgressBar Value="100" Total="100" Style=ProgressBarStyle.Disk OnChanging="OnVolumeChange" />
             </div>
         </div>
 
