--- a/Components/VideoPlayer/VideoPlayer.razor
+++ b/Components/VideoPlayer/VideoPlayer.razor
@@ -1,7 +1,7 @@
 ﻿@namespace AngryMonkey.Cloud.Components
 @inject IJSRuntime jsRuntime
 
-<div class="amc-videoplayer @ClassAttributes" @ref="ComponentElement" @onmousemove="MainMouseMove" @onfullscreenchange="OnFullScreenChange">
+<div class="amc-videoplayer @ClassAttributes" @ref="ComponentElement" @onmousemove="MainMouseMove" @onfullscreenchange="OnFullScreenChange" @onmousewheel="OnMouseWheel">
 
     <div class="amc-videoplayer-video">
         <video src="@VideoUrl" @onload="VideoLoaded" @onchange="OnVideoChange"></video>
@@ -16,35 +16,104 @@
 
     <div class="amc-videoplayer-controls">
         <div class="amc-videoplayer-controls-left">
-            <button class="amc-videoplayer-play" @onclick="PlayVideo">
-                <svg viewBox="0 0 36 40">
-                    <path class="amc-videoplayer-svg-fill" d="M2.85,1.21V38.79a1.19,1.19,0,0,0,1.84,1L33.61,21a1.2,1.2,0,0,0,0-2L4.69.22A1.19,1.19,0,0,0,2.85,1.21Z" />
-                </svg>
-            </button>
-            <button class="amc-videoplayer-pause" @onclick="PauseVideo">
-                <svg viewBox="0 0 36 40">
-                    <path class="amc-videoplayer-svg-fill" d="M13.62.31H6.54A1.18,1.18,0,0,0,5.35,1.49V20h0V38.52a1.18,1.18,0,0,0,1.19,1.17h7.08a1.18,1.18,0,0,0,1.19-1.17V20h0V1.48A1.18,1.18,0,0,0,13.62.31Z" />
-                    <path class="amc-videoplayer-svg-fill" d="M29.46.31H22.38a1.18,1.18,0,0,0-1.19,1.17V20h0V38.52a1.18,1.18,0,0,0,1.19,1.17h7.08a1.18,1.18,0,0,0,1.19-1.17V20h0V1.48A1.18,1.18,0,0,0,29.46.31Z" />
-                </svg>
-            </button>
-            <button class="amc-videoplayer-stop" @onclick="StopVideo">
-                <svg viewBox="0 0 36 40">
-                    <path class="amc-videoplayer-svg-fill" d="M1.69,39.69h0A1.18,1.18,0,0,1,.47,38.52V20h0V1.49A1.18,1.18,0,0,1,1.66.32H34.57a1.18,1.18,0,0,1,1.19,1.17V20h0V38.51a1.18,1.18,0,0,1-1.19,1.17H1.69Z" />
-                </svg>
-            </button>
-            <button class="amc-videoplayer-volume" @onclick="MuteUnmuteVolume">
-                <svg viewBox="0 0 36 40">
-                    <path class="amc-videoplayer-svg-fill" d="M33.56,38.69V1.31a1.18,1.18,0,0,0-1.82-1L16.54,10.55,3,13.18c-.72.46-.72,13.18,0,13.64l13.56,2.63,15.2,10.23A1.18,1.18,0,0,0,33.56,38.69Z" />
-                </svg>
-            </button>
+            @* Play *@
+            <div class="amc-videoplayer-play">
+                <button @onclick="PlayVideo">
+                    <svg viewBox="0 0 36 40">
+                        <path class="amc-videoplayer-svg-fill" d="M2.85,1.21V38.79a1.19,1.19,0,0,0,1.84,1L33.61,21a1.2,1.2,0,0,0,0-2L4.69.22A1.19,1.19,0,0,0,2.85,1.21Z" />
+                    </svg>
+                </button>
+            </div>
 
-            <div class="amc-videoplayer-volumeBar">
-                <ProgressBar Value="100" Total="100" Style=ProgressBarStyle.Disk OnChanging="OnVolumeChange" />
+            @* Pause *@
+            <div class="amc-videoplayer-pause">
+                <button @onclick="PauseVideo">
+                    <svg viewBox="0 0 36 40">
+                        <path class="amc-videoplayer-svg-fill" d="M13.62.31H6.54A1.18,1.18,0,0,0,5.35,1.49V20h0V38.52a1.18,1.18,0,0,0,1.19,1.17h7.08a1.18,1.18,0,0,0,1.19-1.17V20h0V1.48A1.18,1.18,0,0,0,13.62.31Z" />
+                        <path class="amc-videoplayer-svg-fill" d="M29.46.31H22.38a1.18,1.18,0,0,0-1.19,1.17V20h0V38.52a1.18,1.18,0,0,0,1.19,1.17h7.08a1.18,1.18,0,0,0,1.19-1.17V20h0V1.48A1.18,1.18,0,0,0,29.46.31Z" />
+                    </svg>
+                </button>
+            </div>
+
+            @* Stop *@
+            <div class="amc-videoplayer-stop">
+                <button @onclick="StopVideo">
+                    <svg viewBox="0 0 36 40">
+                        <path class="amc-videoplayer-svg-fill" d="M1.69,39.69h0A1.18,1.18,0,0,1,.47,38.52V20h0V1.49A1.18,1.18,0,0,1,1.66.32H34.57a1.18,1.18,0,0,1,1.19,1.17V20h0V38.51a1.18,1.18,0,0,1-1.19,1.17H1.69Z" />
+                    </svg>
+                </button>
+            </div>
+
+            @* Volume *@
+            <div class="amc-videoplayer-volume @(DoShowVolumeControls? "_extended": string.Empty)">
+                <button class="amc-videoplayer-volume-button" @onclick="ShowVolumeControls">
+                    <svg viewBox="0 0 36 40">
+                        <path class="amc-videoplayer-svg-fill" d="M33.56,38.69V1.31a1.18,1.18,0,0,0-1.82-1L16.54,10.55,3,13.18c-.72.46-.72,13.18,0,13.64l13.56,2.63,15.2,10.23A1.18,1.18,0,0,0,33.56,38.69Z" />
+                    </svg>
+
+                    @if (Volume == 0 || IsMuted)
+                    {
+                        <svg class="amc-videoplayer-volume-status" viewBox="0 0 36 40">
+                            <path class="amc-videoplayer-svg-fill" d="M24.82,14.93l.05,0Z" />
+                            <path class="amc-videoplayer-svg-fill" d="M24.72,14.91h0Z" />
+                            <path class="amc-videoplayer-svg-fill" d="M9.33,21.81,7.53,20,2.26,25.27a.63.63,0,0,0,0,.9h0L5,28.87H5a.63.63,0,0,0,.9,0l5.27-5.26-1.81-1.8Z" />
+                            <path class="amc-videoplayer-svg-fill" d="M12.94,18.2,14.75,20l2.55-2.55h0l2.7-2.7a.6.6,0,0,0,.15-.6s0-.06,0-.09a.5.5,0,0,0-.08-.12s0-.07-.06-.09h0L17.3,11.14h0a.64.64,0,0,0-.9,0l-3.16,3.16-2.1,2.11,1.8,1.8Z" />
+                            <path class="amc-videoplayer-svg-fill" d="M20,26.17h0a.64.64,0,0,0,0-.9l-3.16-3.16L14.75,20l-1.81-1.8h0l-1.8-1.8L5.87,11.13a.63.63,0,0,0-.9,0H5L2.27,13.84h0a.63.63,0,0,0,0,.9L7.53,20l1.8,1.81h0l1.81,1.8,2.55,2.56h0l2.7,2.7A.62.62,0,0,0,17,29l.09,0a.5.5,0,0,0,.12-.08s.07,0,.09-.06h0Z" />
+                        </svg>
+                    }
+                    else if (Volume < .33)
+                    {
+                        <svg class="amc-videoplayer-volume-status" viewBox="0 0 36 40">
+                            <path class="amc-videoplayer-svg-fill" d="M24.82,13.87l.05,0Z" />
+                            <path class="amc-videoplayer-svg-fill" d="M24.72,13.85h0Z" />
+                            <path class="amc-videoplayer-svg-fill" d="M24.82,13.81l.05,0Z" />
+                            <path class="amc-videoplayer-svg-fill" d="M24.72,13.79h0Z" />
+                            <path class="amc-videoplayer-svg-fill" d="M24.82,14.93l.05,0Z" />
+                            <path class="amc-videoplayer-svg-fill" d="M24.72,14.91h0Z" />
+                            <path class="amc-videoplayer-svg-fill" d="M7.35,26.11h0c.35,0,.68-.15.68-.36V20H8V14.25c0-.21-.33-.36-.68-.36H3.29c-.35,0-.68.15-.68.37V20h0v3.55h0v2.19c0,.14.14.25.34.31l.08,0H7.35Z" />
+                        </svg>
+                    }
+                    else if (Volume < .66)
+                    {
+                        <svg class="amc-videoplayer-volume-status" viewBox="0 0 36 40">
+                            <path class="amc-videoplayer-svg-fill" d="M24.82,13.81l.05,0Z" />
+                            <path class="amc-videoplayer-svg-fill" d="M24.72,13.79h0Z" />
+                            <path class="amc-videoplayer-svg-fill" d="M24.82,14.93l.05,0Z" />
+                            <path class="amc-videoplayer-svg-fill" d="M24.72,14.91h0Z" />
+                            <path class="amc-videoplayer-svg-fill" d="M7.35,29.88h0A.64.64,0,0,0,8,29.29V20H8V10.71a.64.64,0,0,0-.68-.59H3.29a.65.65,0,0,0-.68.59V20h0v5.74h0V29.3a.55.55,0,0,0,.34.49l.08.05.15,0H7.35Z" />
+                        </svg>
+                    }
+                    else
+                    {
+                        <svg class="amc-videoplayer-volume-status" viewBox="0 0 36 40">
+                            <path class="amc-videoplayer-svg-fill" d="M7.22,33.37h0a.72.72,0,0,0,.64-.79V20h0V7.42a.73.73,0,0,0-.64-.8H3.42a.72.72,0,0,0-.64.79V20h0v7.77h0v4.8a.83.83,0,0,0,.31.67l.08.06a.58.58,0,0,0,.14,0,.35.35,0,0,0,.11,0h3.8Z" />
+                        </svg>
+                    }
+                </button>
+
+                @if (DoShowVolumeControls)
+                {
+                    <button class="amc-videoplayer-volume-mute" @onclick="MuteVolume">
+                        <svg viewBox="0 0 36 40">
+                            <path class="amc-videoplayer-svg-fill" d="M24.82,14.93l.05,0Z" />
+                            <path class="amc-videoplayer-svg-fill" d="M24.72,14.91h0Z" />
+                            <path class="amc-videoplayer-svg-fill" d="M16.2,21.81,14.39,20,9.13,25.27a.63.63,0,0,0,0,.9h0l2.69,2.69h0a.64.64,0,0,0,.9,0L18,23.62l-1.8-1.81Z" />
+                            <path class="amc-videoplayer-svg-fill" d="M19.81,18.2,21.61,20l2.56-2.56h0l2.7-2.7a.62.62,0,0,0,.15-.6s0-.06,0-.09l-.08-.12a.47.47,0,0,0-.06-.09h0l-2.7-2.69h0a.63.63,0,0,0-.9,0l-3.15,3.15L18,16.4l1.81,1.8Z" />
+                            <path class="amc-videoplayer-svg-fill" d="M26.87,26.17h0a.63.63,0,0,0,0-.9l-3.15-3.16L21.61,20l-1.8-1.81h0L18,16.4l-5.26-5.27a.63.63,0,0,0-.9,0h0L9.14,13.84h0a.63.63,0,0,0,0,.9L14.39,20l1.81,1.8h0L18,23.62l2.56,2.55h0l2.7,2.7a.6.6,0,0,0,.6.15L24,29l.12-.07.09-.07h0Z" />
+                        </svg>
+                    </button>
+
+                    <div class="amc-videoplayer-volume-bar">
+                        <ProgressBar Value="@ProgressBarVolume" Total="100" Style=ProgressBarStyle.Disk OnChanging="OnVolumeChanging" OnChanged="OnVolumeChanged" />
+                    </div>
+                }
             </div>
         </div>
 
         <div class="amc-videoplayer-controls-middle">
-            <span class="amc-videoplayer-duration"></span>
+            <div class="amc-videoplayer-duration">
+                <span></span>
+            </div>
         </div>
 
         <div class="amc-videoplayer-controls-right">
@@ -111,6 +180,8 @@
     private bool IsUserChangingProgress = false;
     private bool IsVideoPlaying = false;
     private bool IsFullScreen = false;
+    private bool IsMuted = false;
+    private bool DoShowVolumeControls = false;
 
     private bool IsUserInteracting => IsUserMovingMouse || IsUserChangingProgress;
 
@@ -123,7 +194,10 @@
         List<string> attributes = new();
 
         if (HideControls)
+        {
+            DoShowVolumeControls = false;
             attributes.Add("_hidecontrols");
+        }
 
         if (IsVideoPlaying)
             attributes.Add("_playing");
@@ -139,6 +213,21 @@
 
     [Parameter]
     public string VideoUrl { get; set; }
+
+    private double ProgressBarVolume
+    {
+        get
+        {
+            return Volume * 100;
+        }
+        set
+        {
+            Volume = value / 100;
+        }
+    }
+
+    [Parameter]
+    public double Volume { get; set; } = 1;
 
     public double Duration { get; set; } = 0;
     public double CurrentTime { get; set; } = 0;
@@ -171,7 +260,6 @@
         IsUserMovingMouse = true;
 
         Repaint();
-
 
         await ProgressiveDelay();
     }
@@ -212,18 +300,57 @@
         }
     }
 
-    public async Task MuteUnmuteVolume()
+    public async Task MuteVolume()
     {
+        IsMuted = true;
+
+        DoShowVolumeControls = false;
+
         var module = await Module;
 
-        await module.InvokeVoidAsync("muteUnmuteVolume", ComponentElement);
+        await module.InvokeVoidAsync("muteVolume", ComponentElement, IsMuted);
     }
 
-    public async Task OnVolumeChange(ChangeEventArgs args)
+    private async Task ShowVolumeControls(MouseEventArgs args)
     {
+        if (IsMuted)
+        {
+            IsMuted = false;
+            DoShowVolumeControls = true;
+
+            var module = await Module;
+
+            await module.InvokeVoidAsync("muteVolume", ComponentElement, IsMuted);
+        }
+        else DoShowVolumeControls = !DoShowVolumeControls;
+    }
+
+    protected async Task OnVolumeChanging(ChangeEventArgs args)
+    {
+        ProgressBarVolume = Convert.ToDouble(args.Value);
+
         var module = await Module;
 
-        await module.InvokeVoidAsync("onVolumeChange", ComponentElement, Convert.ToDouble(args.Value));
+        await module.InvokeVoidAsync("changeVolume", ComponentElement, Volume);
+    }
+
+    protected async Task OnVolumeChanged(ChangeEventArgs args)
+    {
+        DoShowVolumeControls = false;
+
+        if (Convert.ToDouble(args.Value) == 0)
+        {
+            IsMuted = true;
+            Volume = 1;
+        }
+    }
+
+    protected async Task OnMouseWheel(WheelEventArgs args)
+    {
+        if (args.DeltaY < 0)
+            await OnVolumeChanging(new ChangeEventArgs() { Value = ProgressBarVolume <= 90 ? ProgressBarVolume + 10 : 100 });
+        else
+            await OnVolumeChanging(new ChangeEventArgs() { Value = ProgressBarVolume >= 10 ? ProgressBarVolume - 10 : 0 });
     }
 
     public async Task OnVideoChange(ChangeEventArgs args)
