--- a/Components/VideoPlayer/videoplayer.less
+++ b/Components/VideoPlayer/videoplayer.less
@@ -73,7 +73,13 @@
 		> div {
 			display: flex;
 			flex-direction: row;
-			align-items:center;
+			align-items: center;
+			gap: 15px;
+
+			> div {
+				padding-left: 5px;
+				padding-right: 5px;
+			}
 		}
 
 		&-right {
@@ -82,7 +88,7 @@
 
 		button {
 			padding: 5px;
-			margin-right: 15px;
+			display: flex;
 
 			svg {
 				width: 18px;
@@ -91,10 +97,36 @@
 		}
 	}
 
-	&-volumeBar{
-		width:100px;
-	} 
-	
+	&-volume {
+		display: flex;
+		align-items: center;
+		border-left: 1px solid transparent;
+		border-right: 1px solid transparent;
+
+		&._extended {
+			border-left-color: rgba(255, 255, 255, .4);
+			border-right-color: rgba(255, 255, 255, .4);
+		}
+
+		&-muted {
+			margin-left: 0;
+		}
+
+		&-bar {
+			width: 100px;
+			padding: 5px;
+
+			::deep .amc-progressbar {
+				height: 20px;
+
+				.amc-progressbar-middle button {
+					width: 15px !important;
+					height: 15px !important;
+				}
+			}
+		}
+	}
+
 	&-pause {
 		display: none;
 	}
