--- a/Components/VideoPlayer/VideoPlayer.razor.css
+++ b/Components/VideoPlayer/VideoPlayer.razor.css
@@ -12,6 +12,14 @@
   -ms-user-select: none;
   user-select: none;
 }
+.Extendible {
+  border: 1px solid transparent;
+}
+.Extendible._extended {
+  border-color: rgba(255, 255, 255, 0.4);
+  border-radius: 3px;
+  background-color: rgba(255, 255, 255, 0.2);
+}
 .amc-videoplayer {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
@@ -52,7 +60,8 @@
   font-size: 1.1em;
   cursor: alias;
 }
-.amc-videoplayer-MoreButtonInfo > div .showinfo ul {
+.amc-videoplayer-MoreButtonInfo > div .showinfo ul,
+.amc-videoplayer-MoreButtonInfo > div .aboutinfo ul {
   list-style: none;
   display: flex;
   flex-direction: column;
@@ -60,15 +69,21 @@
   align-content: flex-start;
   padding: 0;
 }
-.amc-videoplayer-MoreButtonInfo > div .showinfo ul li {
+.amc-videoplayer-MoreButtonInfo > div .showinfo ul li,
+.amc-videoplayer-MoreButtonInfo > div .aboutinfo ul li {
   margin-bottom: 10px;
   font-size: 0.8rem;
 }
 .amc-videoplayer-MoreButtonInfo > div .showinfo ul li a,
+.amc-videoplayer-MoreButtonInfo > div .aboutinfo ul li a,
 .amc-videoplayer-MoreButtonInfo > div .showinfo ul li ahover,
+.amc-videoplayer-MoreButtonInfo > div .aboutinfo ul li ahover,
 .amc-videoplayer-MoreButtonInfo > div .showinfo ul li a:focus,
+.amc-videoplayer-MoreButtonInfo > div .aboutinfo ul li a:focus,
 .amc-videoplayer-MoreButtonInfo > div .showinfo ul li a:active,
-.amc-videoplayer-MoreButtonInfo > div .showinfo ul li a:visited {
+.amc-videoplayer-MoreButtonInfo > div .aboutinfo ul li a:active,
+.amc-videoplayer-MoreButtonInfo > div .showinfo ul li a:visited,
+.amc-videoplayer-MoreButtonInfo > div .aboutinfo ul li a:visited {
   text-decoration: none;
   color: inherit;
 }
@@ -148,12 +163,12 @@
 .amc-videoplayer-volume {
   display: flex;
   align-items: center;
-  border-left: 1px solid transparent;
-  border-right: 1px solid transparent;
+  border: 1px solid transparent;
 }
 .amc-videoplayer-volume._extended {
-  border-left-color: rgba(255, 255, 255, 0.4);
-  border-right-color: rgba(255, 255, 255, 0.4);
+  border-color: rgba(255, 255, 255, 0.4);
+  border-radius: 3px;
+  background-color: rgba(255, 255, 255, 0.2);
 }
 .amc-videoplayer-volume-muted {
   margin-left: 0;
