--- a/Test/Pages/Index.razor
+++ b/Test/Pages/Index.razor
@@ -15,17 +15,19 @@ new VideoPlayerSettings() {
 )">
 </VideoPlayer>
 
-@*<ProgressBar Value="20" Total="500" OnChange="Test" Style="ProgressBarStyle.Flat" />
+@*<ProgressBar Value="20" Total="500" OnChanged="Test" Style="ProgressBarStyle.Circle" />*@
+
+@*<ProgressBar Value="20" Total="500" OnChanged="Test" Style="ProgressBarStyle.Flat" />
 
 <br />
 <br />
 
-<ProgressBar Value="20" Total="500" OnChange="Test" Style="ProgressBarStyle.Circle" />
+<ProgressBar Value="20" Total="500" OnChanged="Test" Style="ProgressBarStyle.Circle" />
 
 <br />
 <br />
 
-<ProgressBar Value="20" Total="500" OnChange="Test" Style="ProgressBarStyle.Disk" />*@
+<ProgressBar Value="20" Total="500" OnChanged="Test" Style="ProgressBarStyle.Disk" />*@
 
 @code {
     public double Seconds { get; set; }
