Add volume value to the Video Player volume

--- a/Components/VideoPlayer/VideoPlayer.razor.css
+++ b/Components/VideoPlayer/VideoPlayer.razor.css
@@ -184,6 +184,9 @@
   width: 15px !important;
   height: 15px !important;
 }
+.amc-videoplayer-volume-value {
+  width: 3ch;
+}
 .amc-videoplayer-pause {
   display: none;
 }
