--- a/Components/VideoPlayer/videoplayer.less
+++ b/Components/VideoPlayer/videoplayer.less
@@ -196,6 +196,7 @@
 
 		&-value {
 			width: 3ch;
+			opacity: .9;
 		}
 	}
 
@@ -215,7 +216,7 @@
 		}
 	}
 
-	&-exitfullscreen {
+/*	&-exitfullscreen {
 		display: none;
 	}
 
@@ -229,7 +230,7 @@
 				display: inline-block;
 			}
 		}
-	}
+	}*/
 
 	&._hidecontrols {
 
@@ -244,6 +245,9 @@
 			}
 
 			&-progress {
+				padding-left: 0px;
+				padding-right: 0px;
+
 				::deep .amc-progressbar {
 					padding-top: 1px;
 					padding-bottom: 1px;
