--- a/Components/VideoPlayer/videoplayer.less
+++ b/Components/VideoPlayer/videoplayer.less
@@ -16,67 +16,57 @@
 	display: flex;
 	flex-direction: column;
 
-	&-MoreButtonInfo {
-		width: 0%;
-		height: 100%;
-		position: absolute;
-		right: 0;
-		top: 0;
+	&-sidebar {
 		background-color: rgba(0, 0, 0, .4);
-		color: red;
-		padding: 0px;
 		white-space: nowrap;
 		overflow: hidden;
-		transition: width 1s ease-in-out;
-		z-index: 1;
+		padding: 20px;
+		min-width: 20%;
+		max-width: 60%;
+		color: #fff;
 
-		> div {
-			margin: 15px;
-			color: #F5F5DC;
-			font-weight: 300;
+		&-menu {
+			display: flex;
+			flex-direction: column;
+		}
 
-			.buttons {
-				display: flex;
-				flex-direction: column;
+		button {
+			font-size: 1.1em;
+			padding: 5px 0;
+			width: 100%;
+			text-align: left;
+		}
 
-				button {
-					border: none;
-					background-color: transparent;
-					color: aqua;
-					font-size: 1.1em;
-					cursor: alias;
-				}
-			}
+		label {
+			display: block;
+			margin-top: 10px;
+			opacity: .8;
+			font-size: 1.1rem;
+		}
 
-			.showinfo,
-			.aboutinfo {
-				ul {
-					list-style: none;
-					display: flex;
-					flex-direction: column;
-					justify-content: center;
-					align-content: flex-start;
-					padding: 0;
+		&-value {
+			word-wrap: break-word;
+			width: 100%;
+			overflow: hidden;
+		}
 
-					li {
-						margin-bottom: 10px;
-						font-size: 0.8rem;
+		a {
+			&, &:visited, &:active, &:focus {
+				color: #fff;
+				text-decoration: none;
+				opacity: .9;
+				font-weight: bold;
 
-
-						a {
-							&, &hover, &:focus, &:active, &:visited {
-								text-decoration: none;
-								color: inherit;
-							}
-						}
-					}
+				&:hover {
+					opacity: 1;
 				}
 			}
 		}
+	}
 
-		&._show {
-			width: 150px;
-		}
+	&-content {
+		flex: 1;
+		display: flex;
 	}
 
 	&-empty {
@@ -215,8 +205,7 @@
 			}
 		}
 	}
-
-/*	&-exitfullscreen {
+	/*	&-exitfullscreen {
 		display: none;
 	}
 
@@ -245,8 +234,8 @@
 			}
 
 			&-progress {
-				padding-left: 0px;
-				padding-right: 0px;
+				padding-left: 1px;
+				padding-right: 1px;
 
 				::deep .amc-progressbar {
 					padding-top: 1px;
